2003-06-25  Chris Toshok  <toshok@ximian.com>

	* e-config-upgrade.c: add general_map and a reference to it in
	gconf_remap_list.  Should fix 44477.

2003-06-19  Dan Winship  <danw@ximian.com>

	* e-folder-tree.c (e_folder_tree_add): Don't leak parent_path,
	even on error

2003-06-16  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	Add missing skel/stubs to BUILD_SOURCES (bug #44717).

2003-06-05  Not Zed  <NotZed@Ximian.com>

	** For #42691.

	* Makefile.am (%.server.in): use implicit rule.
	(BUILT_SOURCES): added server_DATA.

2003-05-22  Not Zed  <NotZed@Ximian.com>

	* e-config-upgrade.c (CONF_MAJOR, CONF_MINOR, CONF_REVISION): Set
	to 1.4.0 for release.

2003-06-10  Larry Ewing  <lewing@ximian.com>

	* e-corba-storage-registry.c (listener_notify): don't leak nr.name.
